Switch to white modal view background

--- a/mysite/src/detailComponent/horizontalLayoutDetail.scss
+++ b/mysite/src/detailComponent/horizontalLayoutDetail.scss
@@ -33,8 +33,10 @@
             position: absolute;
             top: 50%;
             transform: translateY(-50%);
-            color: white;
+            color: black;
             white-space: pre-wrap;
+            font-family: $content-font;
+            font-size: $content-size;
         }
     }
 }
