--- a/mysite/src/variable.scss
+++ b/mysite/src/variable.scss
@@ -20,7 +20,7 @@ $category-title-padding-v: 3px;
 $category-title-padding-h: 6px;
 
 $transparent-background-color: rgba(0, 0, 0, 0);
-$dim-background-color: rgba(0, 0, 0, 0.8);
+$dim-background-color: rgba(250, 250, 250, 0.97);
 $light-header-background-color: rgba(210, 210, 210, 0.4);
 $insta-board-color: grey;
 $resume-board-color: #505498;
@@ -37,8 +37,9 @@ $gray-border-color: rgba(200, 200, 200, 1);
 $gray-text-color: rgba(160, 160, 160, 1);
 
 $page-title-size: 50px;
-$content-size: 12px;
+$content-size: 20px;
 
 $main-title-font: "Helvetica Neue", Helvetica, sans-serif;
 $category-title-font: "Helvetica Neue", Helvetica, sans-serif;
 $nav-font: "Helvetica Neue", Helvetica, sans-serif;
+$content-font: "Helvetica Neue", Helvetica, sans-serif;
