--- a/mysite/src/variable.scss
+++ b/mysite/src/variable.scss
@@ -37,6 +37,7 @@ $gray-border-color: rgba(200, 200, 200, 1);
 $gray-text-color: rgba(160, 160, 160, 1);
 
 $page-title-size: 50px;
+$lg-content-size: 35px;
 $content-size: 20px;
 
 $main-title-font: "Helvetica Neue", Helvetica, sans-serif;
