--- a/mysite/src/detailComponent/textDetail.scss
+++ b/mysite/src/detailComponent/textDetail.scss
@@ -13,6 +13,7 @@
         display: inline-block;
         position: absolute;
         max-height: 100%;
+        max-width: 100%;
         top: 50%;
         transform: translate(-50%, -50%);
         margin-top: 0;
