--- a/mysite/src/variable.scss
+++ b/mysite/src/variable.scss
@@ -40,7 +40,12 @@ $page-title-size: 50px;
 $lg-content-size: 35px;
 $content-size: 20px;
 
-$main-title-font: "Helvetica Neue", Helvetica, sans-serif;
-$category-title-font: "Helvetica Neue", Helvetica, sans-serif;
-$nav-font: "Helvetica Neue", Helvetica, sans-serif;
-$content-font: "Helvetica Neue", Helvetica, sans-serif;
+@font-face {
+    font-family: "Avant Garde Gothic Book";
+    src: url("/asset/font/Avant_Garde_Gothic_Book/font.otf") format("opentype");
+}
+
+$main-title-font: "Avant Garde Gothic Book", Helvetica, sans-serif;
+$category-title-font: "Avant Garde Gothic Book", Helvetica, sans-serif;
+$nav-font: "Avant Garde Gothic Book", Helvetica, sans-serif;
+$content-font: "Avant Garde Gothic Book", Helvetica, sans-serif;
