Use Helvetica Neue for headers

--- a/mysite/src/variable.scss
+++ b/mysite/src/variable.scss
@@ -46,6 +46,6 @@ $content-size: 20px;
 }
 
 $main-title-font: "Avant Garde Gothic Book", Helvetica, sans-serif;
-$category-title-font: "Avant Garde Gothic Book", Helvetica, sans-serif;
+$category-title-font: "Helvetica Neue", Helvetica, sans-serif;
 $nav-font: "Avant Garde Gothic Book", Helvetica, sans-serif;
 $content-font: "Avant Garde Gothic Book", Helvetica, sans-serif;
