Allow multiple rows per bulletin board

--- a/mysite/src/screenComponent/bulletinBoard.scss
+++ b/mysite/src/screenComponent/bulletinBoard.scss
@@ -4,6 +4,10 @@
     position: relative;
     width: 100%;
     height: auto;
-    margin-bottom: $board-spacing;
+    margin-bottom: $top-spacing;
     overflow: hidden;
+
+    &:last-child {
+        margin-bottom: $board-spacing;
+    }
 }
