--- a/mysite/src/detailComponent/textDetail.scss
+++ b/mysite/src/detailComponent/textDetail.scss
@@ -13,14 +13,24 @@
         display: inline-block;
         position: absolute;
         max-height: 100%;
-        max-width: 100%;
+        width: 90%;
         top: 50%;
         transform: translate(-50%, -50%);
         margin-top: 0;
         text-align: left;
         color: black;
         white-space: pre-wrap;
+        word-wrap: break-word;
         font-family: $content-font;
         font-size: $lg-content-size;
+    }
+}
+
+@media (max-width: 900px) {
+    .text-vertical {
+        p {
+            width: 100%;
+            font-size: $lg-content-size-md;
+        }
     }
 }
