--- a/mysite/src/screenComponent/navigator.scss
+++ b/mysite/src/screenComponent/navigator.scss
@@ -2,10 +2,10 @@
 
 .nav {
     list-style-type: none;
+    padding: 0;
 
     li {
         display: inline;
-        margin-left: $base-spacing * 2;
         font-family: $nav-font;
         cursor: pointer;
 
@@ -15,5 +15,9 @@
             object-fit: contain;
             margin-bottom: 0;
         }
+    }
+
+    li:not(:first-child) {
+        margin-left: $base-spacing * 2;
     }
 }
