--- a/mysite/src/modalView.scss
+++ b/mysite/src/modalView.scss
@@ -4,8 +4,8 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    right: 0;
+    bottom: 0;
     background-color: $dim-background-color;
     z-index: 10;
 
@@ -24,6 +24,7 @@
             left: $side-spacing;
             bottom: $close-button-side + $top-spacing + $base-spacing;
             right: $side-spacing;
+            -webkit-overflow-scrolling: touch;
             overflow: scroll;
         }
 
