--- a/mysite/src/variable.scss
+++ b/mysite/src/variable.scss
@@ -45,7 +45,7 @@ $content-size: 20px;
     src: url("/asset/font/Avant_Garde_Gothic_Book/font.otf") format("opentype");
 }
 
-$main-title-font: "Avant Garde Gothic Book", Helvetica, sans-serif;
+$main-title-font: "Futura", "Avant Garde Gothic Book", Helvetica, sans-serif;
 $category-title-font: "Helvetica Neue", Helvetica, sans-serif;
 $nav-font: "Avant Garde Gothic Book", Helvetica, sans-serif;
 $content-font: "Avant Garde Gothic Book", Helvetica, sans-serif;
