--- a/mysite/src/screenComponent/navigator.scss
+++ b/mysite/src/screenComponent/navigator.scss
@@ -1,23 +1,34 @@
 @import "../variable";
 
-.nav {
-    list-style-type: none;
-    padding: 0;
+.panel-container {
+    padding-bottom: 0;
 
-    li {
-        display: inline;
-        font-family: $nav-font;
-        cursor: pointer;
+    .nav {
+        list-style-type: none;
+        padding: 0;
+        margin-bottom: 0;
 
-        img {
-            width: 1.5em;
-            height: 1em;
-            object-fit: contain;
-            margin-bottom: 0;
+        li {
+            display: inline;
+            font-family: $nav-font;
+            cursor: pointer;
+
+            img {
+                width: 1.5em;
+                height: 1em;
+                object-fit: contain;
+                margin-bottom: 0;
+            }
+        }
+
+        li:not(:first-child) {
+            margin-left: $base-spacing * 2;
         }
     }
+}
 
-    li:not(:first-child) {
-        margin-left: $base-spacing * 2;
+@media (max-width: 700px) {
+    .panel-container {
+        padding-bottom: $top-spacing-md;
     }
 }
