--- a/mysite/src/modalView.scss
+++ b/mysite/src/modalView.scss
@@ -8,6 +8,7 @@
     bottom: 0;
     background-color: $dim-background-color;
     z-index: 10;
+    animation: fadeIn 0.25s;
 
     .modal-container {
         position: absolute;
@@ -44,6 +45,11 @@
             }
         }
     }
+}
+
+@keyframes fadeIn {
+    0% {opacity: 0;}
+    100% {opacity: 1}
 }
 
 @media (max-width: 900px) {
