--- a/mysite/src/variable.scss
+++ b/mysite/src/variable.scss
@@ -32,6 +32,11 @@ $reading-board-color: #f8bd2c;
 $arsenal-board-color: #ac6842;
 $navlab-board-color: #cccb9b;
 $remitly-board-color: #273e6c;
+$personal-website-board-color: #2f7488;
+$online-course-board-color: #e8d880;
+$ios-reminder-board-color: #eb9b44;
+$cal-revision-board-color: #3480d0;
+$python-tp-board-color: #3873a3;
 $gray-border-color: rgba(200, 200, 200, 1);
 
 $gray-text-color: rgba(160, 160, 160, 1);
