--- a/mysite/src/screenComponent/header.scss
+++ b/mysite/src/screenComponent/header.scss
@@ -2,7 +2,7 @@
 
 .header-stripe-container {
     h5 {
-        margin: 0 0 $top-spacing 0;
+        margin: 0 0 $base-spacing 0;
         display: inline-block;
         padding: $category-title-padding-v $category-title-padding-h;
         font-family: $category-title-font;
