Add shadow when hover

--- a/mysite/src/screenComponent/bulletin.scss
+++ b/mysite/src/screenComponent/bulletin.scss
@@ -8,6 +8,10 @@
     margin-left: $bulletin-margin;
     border-radius: $standard-border-radius;
 
+    &:hover {
+        box-shadow: 0 0 $base-spacing 0 $shadow-color;
+    }
+
     >.bulletin-header {
         position: relative;
         left: $base-spacing;
@@ -108,6 +112,10 @@
     .bulletin {
         width: $bulletin-width-md;
         margin-left: $bulletin-margin-md;
+
+        &:hover {
+        box-shadow: 0 0 $base-spacing-md 0 $shadow-color;
+    }
     }
 }
 
