--- a/mysite/src/screenComponent/bulletinBoard.scss
+++ b/mysite/src/screenComponent/bulletinBoard.scss
@@ -1,11 +1,10 @@
 @import "../variable";
 
 .bulletin-container {
-    position: relative;
     width: 100%;
     height: auto;
     margin-bottom: $top-spacing;
-    overflow: hidden;
+    display: inline-block;
 
     &:last-child {
         margin-bottom: $board-spacing;
