--- a/mysite/src/variable.scss
+++ b/mysite/src/variable.scss
@@ -22,6 +22,7 @@ $category-title-padding-h: 6px;
 $transparent-background-color: rgba(0, 0, 0, 0);
 $dim-background-color: rgba(250, 250, 250, 0.97);
 $light-header-background-color: rgba(210, 210, 210, 0.4);
+
 $insta-board-color: grey;
 $resume-board-color: #505498;
 $github-board-color: #101010;
@@ -37,9 +38,11 @@ $online-course-board-color: #e8d880;
 $ios-reminder-board-color: #eb9b44;
 $cal-revision-board-color: #3480d0;
 $python-tp-board-color: #3873a3;
-$gray-border-color: rgba(200, 200, 200, 1);
 
+$gray-border-color: rgba(200, 200, 200, 1);
 $gray-text-color: rgba(160, 160, 160, 1);
+$shadow-color: rgba(0, 0, 0, 0.5);
+
 
 $page-title-size: 50px;
 $lg-content-size: 35px;
