Remove touch delay with WebKit

--- a/mysite/src/app.scss
+++ b/mysite/src/app.scss
@@ -8,6 +8,8 @@
 
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
+
+    touch-action: manipulation;
 }
 
 @media (max-width: 900px) {
