Host instagram photos on server

--- a/mysite/src/app.scss
+++ b/mysite/src/app.scss
@@ -10,6 +10,15 @@
     -webkit-font-smoothing: antialiased;
 
     touch-action: manipulation;
+
+    .fade-in {
+        animation: fadeIn 0.25s;
+    }
+}
+
+@keyframes fadeIn {
+    0% {opacity: 0;}
+    100% {opacity: 1}
 }
 
 @media (max-width: 900px) {
