--- a/mysite/src/variable.scss
+++ b/mysite/src/variable.scss
@@ -23,7 +23,7 @@ $transparent-background-color: rgba(0, 0, 0, 0);
 $dim-background-color: rgba(250, 250, 250, 0.97);
 $light-header-background-color: rgba(210, 210, 210, 0.4);
 
-$insta-board-color: grey;
+$insta-board-color: white;
 $resume-board-color: #505498;
 $github-board-color: #101010;
 $cmu-board-color: #97040c;
